# ChangeLog for x11-plugins/gkrellm-bgchanger
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-bgchanger/ChangeLog,v 1.12 2007/02/04 17:59:44 masterdriverz Exp $

*gkrellm-bgchanger-0.1.7 (04 Feb 2007)

  04 Feb 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  -gkrellm-bgchanger-0.0.4-r1.ebuild, -gkrellm-bgchanger-0.0.8.ebuild,
  -gkrellm-bgchanger-0.0.9.ebuild, +gkrellm-bgchanger-0.1.7.ebuild:
  Bump gkrellm-bgchanger to 0.1.6; bug 93212; thanks to Pietro Franchi

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org>
  gkrellm-bgchanger-0.1.2.ebuild:
  Mark 0.1.2 stable on alpha

  27 Apr 2005; Herbie Hopkins <herbs@gentoo.org>
  gkrellm-bgchanger-0.1.0.ebuild:
  Stable on amd64.

  27 Apr 2005; Herbie Hopkins <herbs@gentoo.org>
  gkrellm-bgchanger-0.1.2.ebuild:
  multilib fixes

  02 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  gkrellm-bgchanger-0.1.0.ebuild:
  Masked gkrellm-bgchanger-0.1.0.ebuild stable for ppc

*gkrellm-bgchanger-0.1.0 (09 Jul 2004)

  09 Jul 2004; Tom Martin <slarti@gentoo.org> gkrellm-bgchanger-0.1.0.ebuild:
  Marked ~amd64.

*gkrellm-bgchanger-0.0.9 (18 Jan 2004)

  18 Jan 2004; Martin Holzer <mholzer@gentoo.org>
  gkrellm-bgchanger-0.0.9.ebuild:
  Version bumped. Closes 38338

*gkrellm-bgchanger-0.0.8 (01 Dec 2003)
*gkrellm-bgchanger-0.0.4-r1 (01 Dec 2003)

  01 Dec 2003; Seemant Kulleen <seemant@gentoo.org>
  gkrellm-bgchanger-0.0.4-r1.ebuild, gkrellm-bgchanger-0.0.4.ebuild,
  gkrellm-bgchanger-0.0.8.ebuild:
  split this up to install a gkrellm and a gkrellm2 version separately. Also
  note that the gkrellm2 version had a bump. Closes bug #34572 by Spider
  <spider@gentoo.org>

*gkrellm-bgchanger-0.0.4 (14 Dec 2002)

  14 Dec 2002; Seemant Kulleen <seemant@gentoo.org>
  gkrellm-bgchanger-0.0.4.ebuild ChangeLog
  files/digest-gkrellm-bgchanger-0.0.4 :

  This is actually gkrellmbgchg and gkrellbgchg2 depending on whether you