@@ -1,1 +1,3 @@
 MD5 f26a02ccf59803af46613dd8bc6f2cec gkrellmbgchg2-0.1.0.tar.gz 10003
+RMD160 81c308db3575881f8082e42f2d15eef29c4c294d gkrellmbgchg2-0.1.0.tar.gz 10003
+SHA256 3bf7df5f7772a2f124c062f565ec05122d384b9fbcdf481ee85dc9ff34652aa0 gkrellmbgchg2-0.1.0.tar.gz 10003
