@@ -1,1 +1,3 @@
 MD5 915a9e9c238ca7d74945c4f3a75acbf8 gkrellmbgchg2-0.1.2.tar.gz 11431
+RMD160 25ed217a2c771598f625d1b7e438446236caedf4 gkrellmbgchg2-0.1.2.tar.gz 11431
+SHA256 a53ce067a4f26e7ddf249157c26397e0a67aa637d95223f622583703c4ad7826 gkrellmbgchg2-0.1.2.tar.gz 11431
