@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-bgchanger/Attic/gkrellm-bgchanger-0.1.7.ebuild,v 1.1 2007/02/04 17:59:44 masterdriverz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-bgchanger/Attic/gkrellm-bgchanger-0.1.7.ebuild,v 1.2 2007/02/05 15:53:15 gustavoz Exp $
 
 inherit multilib
 
@@ -14,7 +14,7 @@ SRC_URI="http://www.bender-suhl.de/stefan/comp/sources/${MY_P}.tar.gz"
 
 SLOT="2"
 LICENSE="GPL-2"
-KEYWORDS="~alpha ~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ppc sparc ~x86"
 
 DEPEND="=app-admin/gkrellm-2*"
 
