@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/gkrellm-bgchanger
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-bgchanger/ChangeLog,v 1.12 2007/02/04 17:59:44 masterdriverz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-bgchanger/ChangeLog,v 1.13 2007/02/05 15:53:15 gustavoz Exp $
+
+  05 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  gkrellm-bgchanger-0.1.7.ebuild:
+  Stable on sparc wrt #151446
 
 *gkrellm-bgchanger-0.1.7 (04 Feb 2007)
 
